==> sihyun-noh/scale_with_esp_idf/product/C_H_PROJECT/SensorNode/components/bsp_component/sdi12/SDI12.cpp <==
#include "SDI12.h"  //  Header file for this library
#include "soc/gpio_num.h"
#include "esp_log.h"

void SDI12::setDataPin(int8_t dataPinRX, int8_t dataPinTX) {
  _dataPinRX = dataPinRX;
  _dataPinTX = dataPinTX;
}

void SDI12::setPinInterrupts(bool enable) {
  // Merely need to attach the interrupt function to the pin

  if (enable) {
    gpio_intr_enable((gpio_num_t)_dataPinRX);
  } else {
    gpio_intr_disable((gpio_num_t)_dataPinRX);
  }
}

void SDI12::setState(SDI12_STATES state) {
  switch (state) {
    case SDI12_HOLDING: {
      pinMode_esp((gpio_num_t)_dataPinTX, ESP_OUTPUT);  // Pin mode = output
      gpio_set_level((gpio_num_t)_dataPinTX, 0);

      pinMode_esp((gpio_num_t)_txOE, ESP_OUTPUT);  // Pin mode = input, pull-up resistor off
      gpio_set_level((gpio_num_t)_dataPinTX, 1);
      break;
    }
    case SDI12_TRANSMITTING: {
      pinMode_esp((gpio_num_t)_dataPinTX, ESP_OUTPUT);  // Pin mode = output
      pinMode_esp((gpio_num_t)_txOE, ESP_OUTPUT);       // Pin mode = input, pull-up resistor off
      gpio_set_level((gpio_num_t)_txOE, 0);

      break;
    }
    case SDI12_LISTENING: {
      // Re-enable universal interrupts as soon as critical timing is past
      portENABLE_INTERRUPTS();
      setPinInterrupts(true);  // Enable Rx interrupts on data pin
      rxState = WAITING_FOR_START_BIT;

      gpio_set_level((gpio_num_t)_txOE, 1);  // Pin state = low (turns off pull-up)
      break;
    }
    default:  // SDI12_DISABLED or SDI12_ENABLED
    {
      pinMode_esp((gpio_num_t)_dataPinTX, ESP_OUTPUT);  // Pin mode = output
      gpio_set_level((gpio_num_t)_dataPinTX, 0);        // Pin state = HIGH - marking

      pinMode_esp((gpio_num_t)_txOE, ESP_OUTPUT);  // Pin mode = input, pull-up resistor off
      gpio_set_level((gpio_num_t)_txOE, 1);        // Pin state = low (turns off pull-up)
      break;
    }
  }
}

void SDI12::wakeSensors(int8_t extraWakeTime) {
  //  setState(SDI12_TRANSMITTING);
  //  // Universal interrupts can be on while the break and marking happen because
  //  // timings for break and from the recorder are not critical.
  //  // Interrupts on the pin are disabled for the entire transmitting state
  //  digitalWrite(_dataPin, HIGH);         // break is HIGH
  //  delayMicroseconds(lineBreak_micros);  // Required break of 12 milliseconds (12,000 µs)
  //  delay(extraWakeTime);                 // allow the sensors to wake
  //  digitalWrite(_dataPin, LOW);          // marking is LOW
  //  delayMicroseconds(marking_micros);  // Required marking of 8.33 milliseconds(8,333 µs)

  setState(SDI12_TRANSMITTING);
  // Universal interrupts can be on while the break and marking happen because
  // timings for break and from the recorder are not critical.
  // Interrupts on the pin are disabled for the entire transmitting state
  gpio_set_level((gpio_num_t)_dataPinTX, 1);  // break is HIGH
  esp_rom_delay_us(lineBreak_micros);         // Required break of 12 milliseconds (12,000 µs)
  vTaskDelay(pdMS_TO_TICKS(extraWakeTime));
  gpio_set_level((gpio_num_t)_dataPinTX, 0);  // marking is LOW
  esp_rom_delay_us(marking_micros);           // Required marking of 8.33 milliseconds(8,333 µs)
}

void SDI12::writeChar(uint8_t outChar) {
  uint8_t currentTxBitNum = 0;  // first bit is start bit
  uint8_t bitValue = 1;         // start bit is HIGH (inverse parity...)

  // _ALL_ interrupts disabled so timing can't be shifted
  portDISABLE_INTERRUPTS();

  sdi12timer_t t0 = READTIME;  // start time

  // immediately get going on the start bit
  // this gives us 833µs to calculate parity and position of last high bit
  gpio_set_level((gpio_num_t)_dataPinTX, 1);  // Start bit (inverse logic: HIGH)

  currentTxBitNum++;

  uint8_t parityBit = parity_even_bit(outChar);  // Calculate the parity bit
  outChar |= (parityBit << 7);                   // Add parity bit to the outgoing character

  // Calculate the position of the last bit that is a 0/HIGH (ie, HIGH, not marking)
  // That bit will be the last time-critical bit.  All bits after that can be
  // sent with interrupts enabled.

  uint8_t lastHighBit = 9;  // The position of the last bit that is a 0 (ie, HIGH, not marking)
  uint8_t msbMask = 0x80;   // A mask with all bits at 1
  while (msbMask & outChar) {
    lastHighBit--;
    msbMask >>= 1;
  }

  // Hold the line for the rest of the start bit duration

  while ((uint8_t)(READTIME - t0) < txBitWidth) {}
  t0 = READTIME;  // advance start time

  // repeat for all data bits until the last bit different from marking
  while (currentTxBitNum++ < lastHighBit) {
    bitValue = outChar & 0x01;  // get next bit in the character to send
    if (bitValue) {
      gpio_set_level((gpio_num_t)_dataPinTX, 0);  // set the pin state to LOW for 1's

    } else {
      gpio_set_level((gpio_num_t)_dataPinTX, 1);  // set the pin state to HIGH for 0's
    }
    // Hold the line for this bit duration
    while ((uint8_t)(READTIME - t0) < txBitWidth) {}
    t0 = READTIME;  // start time

    outChar = outChar >> 1;  // shift character to expose the following bit
  }

  // Set the line low for the all remaining 1's and the stop bit

  gpio_set_level((gpio_num_t)_dataPinTX, 0);  // set the pin state to LOW for 1's

  // Re-enable universal interrupts as soon as critical timing is past
  portENABLE_INTERRUPTS();

  // Hold the line low until the end of the 10th bit
  uint8_t bitTimeRemaining = txBitWidth * (10 - lastHighBit);
  while ((uint8_t)(READTIME - t0) < bitTimeRemaining) {}
}

void SDI12::sendResponse(const char* resp) {
  setState(SDI12_TRANSMITTING);               // Get ready to send data to the recorder
                                              //  digitalWrite(_dataPin, LOW);        // marking is LOW
  gpio_set_level((gpio_num_t)_dataPinRX, 1);  // marking is LOW
  esp_rom_delay_us(marking_micros);           // 8.33 ms marking before response
  for (int unsigned i = 0; i < strlen(resp); i++) {
    writeChar(resp[i]);  // write each character
  }
  setState(SDI12_LISTENING);  // return to listening state
}

void SDI12::receiveISR() {
  // time of this data transition (plus ISR latency)
  sdi12timer_t thisBitTCNT = READTIME;

  //  uint8_t pinLevel = digitalRead(_dataPin);  // current RX data level
  uint8_t pinLevel = gpio_get_level((gpio_num_t)_dataPinRX);  // current RX data level

  // Check if we're ready for a start bit, and if this could possibly be it.
  if (rxState == WAITING_FOR_START_BIT) {
    // If we are waiting for a start bit and the pin is low it's not a start bit, exit
    // Inverse logic start bit = HIGH
    // if (pinLevel == LOW) { return; }
    if (pinLevel == 1) {
      return;
    }
    // If the pin is HIGH, this should be a start bit.
    // Thus startChar(), which sets the rxState to 0, create an empty character, and a
    // new mask with a 1 in the lowest place
    startChar();
  } else {
    // If we're not waiting for a start bit, it's because we're in the middle of an
    // incomplete character and therefore this change in the pin state must be from a
    // data, parity, or stop bit.

    // Check how many bit times have passed since the last change
    uint16_t rxBits = bitTimes((uint8_t)(thisBitTCNT - prevBitTCNT));
    // Calculate how many *data+parity* bits should be left in the current character
    //      - Each character has a total of 10 bits, 1 start bit, 7 data bits, 1 parity
    // bit, and 1 stop bit
    //      - The #rxState holds record of how many of the data + parity bits we've
    // gotten (up to 8)
    //      - We have to treat the parity bit as a data bit because we don't know its
    // state
    //      - Since we're mid character, we know the start bit is past which knocks us
    // down to 9
    //      - There will always be one left over for the stop bit, which will be LOW/1
    uint8_t bitsLeft = 9 - rxState;
    // If the number of bits passed since the last transition is more than then number
    // of bits left on the character we were working on, a new character must have
    // started.
    // This will happen if the parity bit is 1 or the last bit(s) of the character and
    // the parity bit are all 1's.
    bool nextCharStarted = (rxBits > bitsLeft);

    // Check how many data+parity bits have been sent in this frame.  This will be
    // different from the rxBits if a new character has started because of the start
    // and stop bits.
    //      - If the total number of bits in this frame is more than the number of
    // data+parity bits remaining in the character, then the number of data+parity bits
    // is equal to the number of bits remaining for the character and partiy.
    //      - If the total number of bits in this frame is less than the number of data
    // bits left for the character and parity, then the number of data+parity bits
    // received in this frame is equal to the total number of bits received in this
    // frame.
    // translation:
    //    if nextCharStarted then bitsThisFrame = bitsLeft
    //                       else bitsThisFrame = rxBits
    uint8_t bitsThisFrame = nextCharStarted ? bitsLeft : rxBits;
    // Tick up the rxState by the number of data+parity bits received in the frame
    rxState += bitsThisFrame;

    // Set all the bits received between the last change and this change
    // if (pinLevel == HIGH) {
    if (pinLevel == 0) {
      // If the current state is HIGH (and it just became so), then all bits between
      // the last change and now must have been LOW.
      // back fill previous bits with 1's (inverse logic - LOW = 1)
      while (bitsThisFrame-- > 0) {
        // for each of the bits that happened in this frame

        rxValue |= rxMask;     // Add a 1 to the LSB/right-most place of our character
                               // value from the mask
        rxMask = rxMask << 1;  // Shift the 1 in the mask up by one position
      }
      // And shift the 1 in the mask up by one more position for the current bit.
      // It's HIGH/0 now, so we don't use `|=` with the mask for this last one.
      rxMask = rxMask << 1;
    } else {
      // If the current state is LOW (and it just became so), then this bit is LOW
      // but all bits between the last change and now must have been HIGH

      // pinLevel==LOW
      // previous bits were 0's so only this bit is a 1 (inverse logic - LOW = 1)
      rxMask = rxMask << (bitsThisFrame - 1);  // Shift the 1 in the mask up by the number of bits past
      rxValue |= rxMask;                       //  And add that shifted one to the character being created
    }

    // If this was the 8th or more bit then the character and parity are complete.
    if (rxState > 7) {
      rxValue &= 0x7F;        // Throw away the parity bit (and with 0b01111111)
      charToBuffer(rxValue);  // Put the finished character into the buffer

      // if this is LOW, or we haven't exceeded the number of bits in a
      // character (but have gotten all the data bits) then this should be a
      // stop bit and we can start looking for a new start bit.
      // if ((pinLevel == LOW) || !nextCharStarted) {
      if ((pinLevel == 1) || !nextCharStarted) {
        rxState = WAITING_FOR_START_BIT;  // DISABLE STOP BIT TIMER
      } else {
        // If we just switched to HIGH, or we've exceeded the total number of
        // bits in a character, then the character must have ended with 1's/LOW,
        // and this new 0/HIGH is actually the start bit of the next character.
        startChar();
      }
    }
  }
  prevBitTCNT = thisBitTCNT;  // finally remember time stamp of this change!
}
